[gd_scene load_steps=13 format=2]

[ext_resource path="res://asset/level.png" type="Texture" id=1]
[ext_resource path="res://asset/level3_button.png" type="Texture" id=2]
[ext_resource path="res://asset/level1_button_hover.png" type="Texture" id=3]
[ext_resource path="res://asset/level2_button_pressed.png" type="Texture" id=4]
[ext_resource path="res://asset/level2_button_hover.png" type="Texture" id=5]
[ext_resource path="res://asset/level1_button.png" type="Texture" id=6]
[ext_resource path="res://asset/level3_button_hover.png" type="Texture" id=7]
[ext_resource path="res://asset/level2_button.png" type="Texture" id=8]
[ext_resource path="res://asset/level3_button_pressed.png" type="Texture" id=9]
[ext_resource path="res://asset/level1_button_pressed.png" type="Texture" id=10]
[ext_resource path="res://scene/level_type.gd" type="Script" id=11]
[ext_resource path="res://asset/01 Fallout 4 Main Theme.mp3" type="AudioStream" id=12]

[node name="level_type" type="Node2D"]
script = ExtResource( 11 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1198.0
margin_bottom = 674.0
texture = ExtResource( 1 )
expand = true

[node name="level1" type="TextureButton" parent="."]
margin_left = 38.0
margin_top = 237.0
margin_right = 446.0
margin_bottom = 437.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 3 )
expand = true

[node name="level2" type="TextureButton" parent="."]
margin_left = 401.0
margin_top = 235.0
margin_right = 809.0
margin_bottom = 435.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
expand = true

[node name="level3" type="TextureButton" parent="."]
margin_left = 751.0
margin_top = 237.0
margin_right = 1157.0
margin_bottom = 436.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 7 )
expand = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[connection signal="pressed" from="level1" to="." method="_on_level1_pressed"]
[connection signal="pressed" from="level2" to="." method="_on_level2_pressed"]
[connection signal="pressed" from="level3" to="." method="_on_level3_pressed"]
